  * All Timesteps have the has_positions has_velocities and has_forces
    boolean flags (Issue #213)
  * Timesteps can now allocate velocities and forces if they weren't
    originally created with these through the use of the has_ flags.
    (Issue #213)
  * Timesteps now store 'dt' and 'time_offset' if passed to them by Reader
    (Issues 306 and 307)

  Changes
  * A ProtoReader class intermediate between IObase and Reader was added so
    specific Readers can be subclassed without __del__ (the ChainReader and
    SingleFrameReader), thus preventing memleaks (Issue #312).
  * Atoms (and all container classes thereof) are now bound to Universes
    only via weakrefs. If Universes are not explicitly kept in scope Atoms
    will become orphaned.
  * Timestep can now only init using an integer argument (which
    represents the number of atoms)
  * Added from_timestep and from_coordinates construction methods
    to base.Timestep
  * Removed FormatError, now replaced by ValueError
  * distances.contact_matrix(): changed keyword 'suppress_progmet' to
    'quiet'
  * Moved MDAnalysis.KDTree to MDAnalysis.lib.KDTree (Issue #287)
  * Moved MDAnalysis.core.transformations to MDAnalysis.lib.transformations
    (Issue #287)
  * Moved MDAnalysis.core.util to MDAnalysis.lib.util (Issue #287)
  * Moved MDAnalysis.core.log to MDAnalysis.lib.log (Issue #287)
  * Moved MDAnalysis.core.units to MDAnalysis.units (Issue #287)
  * Moved MDAnalysis.core.distances to MDAnalysis.lib.distances (Issue #287)
  * Moved MDAnalysis.core.parallel to MDAnalysis.lib.parallel (Issue #287)
  * base.Reader now defines __iter__
  * __iter__ removed from many Readers (now use base.Reader implementation)
  * numpy >= 1.5 required
  * Timestep._x _y and _z are now read only (Issue #213)

  Fixes
  * Fixed TPRParser considering LJ 1..4 exclusions as bonds (Issue #351)
  * ChainReaders no longer leak (Issue #312)
  * analysis.hbonds.HydrogenBondAnalysis performs a sanity check for