@@ -13,7 +13,7 @@ Also see https://github.com/MDAnalysis/mdanalysis/wiki/MDAnalysisTests
 and https://github.com/MDAnalysis/mdanalysis/wiki/UnitTests
 
 ------------------------------------------------------------------------------
-??/??/2015 manuel.nuno.melo
+??/??/2015 manuel.nuno.melo, orbeckst
   * 0.11.0
 
     - Overhaul of the test subsystem.
@@ -21,6 +21,8 @@ and https://github.com/MDAnalysis/mdanalysis/wiki/UnitTests
       Available plugins are: memleak testing, stderr capturing (for quieter
       test runs), and proper knownfailure implementation (Issue 338).
     - renamed test_selections.py to test_atomselections.py
+    - new test_selections.py is now testing MDAnalysis.selections
+      (Issue #353)
 
 02/11/2012 orbeckst, seb-buch
 
